# kubernetes-machine-learning-server

./: Dockerfile  README.md  argocd_manifest.yaml  pyproject.toml
kubernetes/: deployment.yaml  job.yaml  pvc.yaml  service.yaml
machine-learning/: .dockerignore  .env  .gitignore  Dockerfile  README.md  buildAndPushToDockerhub.sh  main.py  pyproject.toml
rest_api/: .dockerignore  buildAndPushToDockerhub.sh  pyproject.toml
rest_api/app/: README.md  main.py
rest_api/templates/: client.html
