[project]
name = "spotify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fpgrowth-py>=1.0.0",
    "matplotlib>=3.10.0",
    "mlxtend>=0.23.3",
    "pandas>=2.2.3",
    "polars>=1.19.0",
    "pyarrow>=18.1.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "scikit-learn>=1.6.1",
]
